# technitium-dns-MCP

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: api-coverage.md
src/technitium_dns_mcp/: __main__.py  app.py  config.py  guards.py  sanitize.py
src/technitium_dns_mcp/client/: __init__.py  base.py  endpoint_catalog.py  errors.py  models.py
src/technitium_dns_mcp/tools/: __init__.py  admin_cluster.py  admin_groups.py  admin_permissions.py  admin_sessions.py  admin_users.py  allowed.py  apps.py  blocked.py  cache.py  dhcp.py  diagnostics.py  dns_client.py  logs.py  mutations.py  settings.py  zone_dnssec.py  zones.py
src/technitium_dns_mcp/validation/: __init__.py  common.py  dns.py
tests/e2e/: test_compose_health.py  test_project_files.py  test_tool_surface_audit.py
tests/integration/: test_health.py  test_tools_admin_cluster.py  test_tools_admin_groups.py  test_tools_admin_permissions.py  test_tools_admin_sessions.py  test_tools_admin_users.py  test_tools_allowed.py  test_tools_apps.py  test_tools_blocked.py  test_tools_cache.py  test_tools_dhcp.py  test_tools_diagnostics.py  test_tools_dns_client.py  test_tools_logs.py  test_tools_readonly_mode.py  test_tools_records_dashboard.py  test_tools_settings.py  test_tools_write_zone.py  test_tools_zone_dnssec.py  test_tools_zones.py
tests/unit/: test_client_base.py  test_config.py  test_endpoint_catalog.py  test_guards.py  test_mutation_guard.py  test_sanitize.py  test_validation_common.py  test_validation_dns.py
